--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "eleventy --serve",
-    "build": "eleventy"
+    "build": "eleventy",
+    "production": "ELEVENTY_ENV=prod npx @11ty/eleventy"
   },
   "repository": {
     "type": "git",
