--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "eleventy --serve",
     "build": "eleventy",
-    "production": "ELEVENTY_ENV=prod npx @11ty/eleventy"
+    "production": "ELEVENTY_ENV=prod npx @11ty/eleventy",
   },
   "repository": {
     "type": "git",
