--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -1,31 +1,18 @@
 name: Eleventy Build
-
-
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
-  deploy:
+  build_deploy:
     runs-on: ubuntu-latest
     steps:
-        - uses: actions/checkout@v2
-
-
-        - name: Setup Node
-          uses: actions/setup-node@v1
-          with:
-            node-version: '10.x'
-
-
-        - run: npm ci
-        - run: npm run build
-
-
-        - name: Deploy
-          uses: peaceiris/actions-gh-pages@v3
-          with:
+      - uses: actions/checkout@v2
+      - name: Build
+        uses: TartanLlama/actions-eleventy@v1.2
+        with:
+          install_dependencies: true
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v1.1.0
+        env:
+          PUBLISH_DIR: docs
+          PUBLISH_BRANCH: main
             deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-
-            publish_dir: ./public
