--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -1,18 +1,31 @@
 name: Eleventy Build
-on: [push]
+
+
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  build_deploy:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Build
-        uses: TartanLlama/actions-eleventy@v1.2
-        with:
-          install_dependencies: true
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v1.1.0
-        env:
-          PUBLISH_DIR: docs
-          PUBLISH_BRANCH: main
+        - uses: actions/checkout@v2
+
+
+        - name: Setup Node
+          uses: actions/setup-node@v1
+          with:
+            node-version: '10.x'
+
+
+        - run: npm ci
+        - run: npm run build
+
+
+        - name: Deploy
+          uses: peaceiris/actions-gh-pages@v3
+          with:
             deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+
+            publish_dir: ./public
