--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -18,14 +18,12 @@ jobs:
           with:
             node-version: '10.x'
 
-
         - run: npm install
         - run: npm run build
-
 
         - name: Deploy
           uses: peaceiris/actions-gh-pages@v3
           with:
             deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-
             publish_dir: ./public
+            publish_branch: main
